# sff-crosscompilation-hell

./: sff.tar
libvterm/: libvterm.la
libvterm-0.2/.libs/: libvterm.so.0.0.0
libvterm/.libs/: libvterm.lai
sff/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kobo.cmake
sff/app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  qvterm.hpp  region.hpp
sff/app/sff_autogen/: moc_predefs.h  mocs_compilation.cpp
sff/app/sff_autogen/EWIEGA46WW/: moc_qvterm.cpp  moc_qvterm.cpp.d
sff/ext/: Makefile  cmake_install.cmake
sff/ext/libvterm/: Makefile  libvterm.la  stracefile
sff/ext/libvterm/.libs/: libvterm.lai
sff/libvterm/src/libvterm_vendored-stamp/: libvterm_vendored-source_dirinfo.txt
sff/libvterm/tmp/: libvterm_vendored-mkdirs.cmake
sff/qvterm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  highlight.cpp  highlight.hpp  kobo.cmake  qvterm.cpp  region.cpp
sff/qvterm/qvterm_autogen/: moc_predefs.h
sff/qvterm/qvterm_autogen/EWIEGA46WW/: moc_qvterm.cpp.d
sff/root/lib/: libvterm.so.0.0.3
sff/root/lib/pkgconfig/: vterm.pc
